// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BirthDateField /> matches snapshot 1`] = `
<input
  class="sc-iqAbSa jrHUfY"
  id="birthDateField"
  name="name"
  placeholder="BirthDate"
  type="date"
  value=""
/>
`;

exports[`<BirthDateField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test
      </label>
      <input
        class="sc-iqAbSa jrHUfY"
        id="birthDateField"
        label="Test"
        name="name"
        placeholder="BirthDate"
        type="date"
        value=""
      />
    </div>
  </form>
</div>
`;
